--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,81 +1,49 @@
-name: Deploy Node.js App to Azure
+name: Deploy Docker App to Azure
 
 on:
   push:
     branches:
       - master
+      - main
   workflow_dispatch:
 
+env:
+  REGISTRY: mlakumulu.azurecr.io
+  IMAGE_NAME: mlaku-mulu-backend
+  AZURE_WEBAPP_NAME: mlaku-mulu-backend
+
 jobs:
-  build:
-    name: Build & Test Application
+  build-and-deploy:
+    name: Build & Deploy Docker Image
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      id-token: write
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Azure Container Registry
+        uses: azure/docker-login@v1
         with:
-          node-version: '18.x'
-          cache: 'npm'
+          login-server: ${{ env.REGISTRY }}
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run ESLint (Ignore Errors)
-        run: npm run lint --if-present || true
-
-      - name: Run Tests (Ignore Errors)
-        run: npm run test --if-present || true
-
-      - name: Generate Prisma Client
-        run: npx prisma generate
-
-      - name: Apply Prisma Migrations (Safe)
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-        run: |
-          npx prisma migrate deploy || npx prisma db push
-
-      - name: Build Application
-        run: npm run build --if-present
-
-      - name: Prepare Deployment Package
-        run: |
-          mkdir deploy-package
-          rsync -av --progress ./ deploy-package --exclude deploy-package --exclude node_modules --exclude .git --exclude .github --exclude .next --exclude prisma/migrations
-          zip -r release.zip deploy-package
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
         with:
-          name: node-app
-          path: release.zip
-
-  deploy:
-    name: Deploy to Azure Web App
-    runs-on: ubuntu-latest
-    needs: build
-    environment: Production
-    permissions:
-      id-token: write
-      contents: read
-
-    steps:
-      - name: Download Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: node-app
-
-      - name: Unzip Artifact
-        run: unzip release.zip
-
-      - name: List Files Before Deployment
-        run: ls -la
+          context: .
+          push: true
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Login to Azure
         uses: azure/login@v2
@@ -85,9 +53,15 @@ jobs:
           client-secret: ${{ secrets.AZUREAPPSERVICE_SECRET }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
 
-      - name: Deploy to Azure Web App
+      - name: Deploy to Azure Web App for Containers
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'mlaku-mulu-backend'
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
           slot-name: 'Production'
-          package: release.zip
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+
+      - name: Health check
+        run: |
+          echo "Waiting for deployment to be ready..."
+          sleep 30
+          curl -f https://${{ env.AZURE_WEBAPP_NAME }}.azurewebsites.net/health || echo "Health check failed - app may still be starting"
