--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,31 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Verify build context
+        run: |
+          echo "🔍 Verifying build context..."
+          echo "📁 Current directory: $(pwd)"
+          echo "📋 Files in root:"
+          ls -la
+          echo "📋 Dockerfile exists:"
+          if [ -f "Dockerfile" ]; then
+            echo "✅ Dockerfile found"
+            echo "📄 Dockerfile content (first 10 lines):"
+            head -10 Dockerfile
+          else
+            echo "❌ Dockerfile not found"
+            exit 1
+          fi
+          echo "📋 Package.json exists:"
+          if [ -f "package.json" ]; then
+            echo "✅ Package.json found"
+            echo "📄 Build script:"
+            grep -A 1 '"build"' package.json
+          else
+            echo "❌ Package.json not found"
+            exit 1
+          fi
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -34,6 +59,8 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           platforms: linux/amd64
+          build-args: |
+            BUILDKIT_INLINE_CACHE=1
 
       - name: List all Docker images
         run: |
@@ -55,6 +82,8 @@ jobs:
             docker images
             echo "🔍 Searching for similar images:"
             docker images | grep -i mlaku || echo "No similar images found"
+            echo "🔍 Recent Docker build history:"
+            docker history ${{ env.IMAGE_NAME }}:latest 2>/dev/null || echo "No build history found"
             exit 1
           fi
 
