remove: health check endpoints and health check from workflow and Dockerfile

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -143,30 +143,13 @@ jobs:
             # Wait for container to start
             sleep 15
             
-            echo "🏥 Running health check..."
-            # Health check with retries
-            for i in {1..5}; do
-              echo "Health check attempt $i/5..."
-              if curl -f http://localhost:8086/health; then
-                echo "✅ Health check passed!"
-                break
-              else
-                echo "⏳ Health check attempt $i failed, waiting..."
-                sleep 5
-              fi
-            done
+            echo "📊 Container status:"
+            docker ps -a
             
-            # Final health check
-            if curl -f http://localhost:8086/health; then
-              echo "✅ Deployment successful! Container is healthy."
-            else
-              echo "❌ Health check failed after all attempts."
-              echo "📋 Container logs:"
-              docker logs ${{ env.CONTAINER_NAME }} --tail 30
-              echo "📊 Container status:"
-              docker ps -a
-              exit 1
-            fi
+            echo "📋 Container logs (last 20 lines):"
+            docker logs ${{ env.CONTAINER_NAME }} --tail 20
+            
+            echo "✅ Deployment completed successfully!"
             
             # Clean up repository (optional - keep for debugging)
             echo "🧹 Cleaning up repository..."
@@ -179,10 +162,6 @@ jobs:
         run: |
           echo "⏳ Waiting for deployment to be ready..."
           sleep 30
-          echo "🔍 Verifying deployment at http://${{ secrets.VPS_HOST }}:8086/health"
-          if curl -f http://${{ secrets.VPS_HOST }}:8086/health; then
-            echo "✅ VPS deployment verified successfully!"
-          else
-            echo "❌ VPS deployment verification failed"
-            exit 1
-          fi
+          echo "🔍 Checking container status on VPS..."
+          sshpass -p '${{ secrets.VPS_PASSWORD }}' ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "docker ps -a | grep ${{ env.CONTAINER_NAME }}"
+          echo "✅ VPS deployment completed!"
